--- a/src/Forest.Api/appsettings.json
+++ b/src/Forest.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Data Source=app.db"
+    "Default": "Data Source=../../data/app.db"
   },
   "Logging": {
     "LogLevel": {
