add authN and authZ to endpoints

--- a/src/Forest.Api/appsettings.json
+++ b/src/Forest.Api/appsettings.json
@@ -2,6 +2,12 @@
   "ConnectionStrings": {
     "Default": "Data Source=../../data/app.db"
   },
+  "Jwt": {
+    "Issuer": "ForestOwner",
+    "Audience": "ForestUsers",
+    "Key": "SECRET_yat5hIdBqYy6rZDUqwUIYYYqWu1sT9md",
+    "LifetimeMinutes": 15
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
